deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blue-green-rollout
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blue-green-rollout
  labels:
    app: testing
  namespace: blue-green-rollout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing
  template:
    metadata:
      labels:
        app: testing
    spec:
      volumes:
        - name: emptydir
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: emptydir
              mountPath: /usr/share/nginx/html
  strategy:
    blueGreen:
      activeService: active-svc
      previewService: preview-svc
      autoPromotionEnabled: false
---
apiVersion: v1
kind: Service
metadata:
  name: active-svc
  namespace: blue-green-rollout
spec:
  type: ClusterIP
  selector:
    app: testing
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: preview-svc
  namespace: blue-green-rollout
spec:
  type: ClusterIP
  selector:
    app: testing
  ports:
    - port: 80
      targetPort: 80
