ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  namespace: blue-green-rollout
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    ###### bluegreen.live.com will be a enduser facing web URL #######
    - host: bluegreen.81.co.ucll.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: active-svc
                port:
                  number: 80
    ###### bluegreen.staging.com will be internal testing web URL (Like for new app version fucntionality for QA testers) ######
    - host: bluegreenstaging.81.co.ucll.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: preview-svc
                port:
                  number: 80
